--- a/datahub-web/@datahub/user/app/styles/user/profile/_content.scss
+++ b/datahub-web/@datahub/user/app/styles/user/profile/_content.scss
@@ -1,6 +1,7 @@
 .user-profile-content {
   $application-navbar-static-height: item-spacing(8) !default;
   $banner-alerts-height: 52px !default;
+  $tablist-width: item-spacing(5) * 11;
 
   margin-top: item-spacing(6);
 
@@ -8,44 +9,70 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: $max-container-width;
     margin: 0 auto;
 
+    &__tab-header {
+      padding: item-spacing(2 4);
+      font-weight: bold;
+    }
+
     &__tabslist {
+      top: $application-navbar-static-height;
+
+      &--with-banner-offset {
+        top: $banner-alerts-height + $application-navbar-static-height;
+      }
+
       &.ivy-tabs-tablist {
         height: fit-content;
 
         &[role='tablist'] {
           box-sizing: border-box;
-          border-top: none;
+          border: none;
           display: flex;
           flex-direction: column;
           align-items: flex-start;
-          width: 264px;
+          width: $tablist-width;
           position: sticky;
-          top: $application-navbar-static-height;
           background-color: get-color(white);
           margin: item-spacing(2 0);
+          border-radius: 2px;
+          box-shadow: 0 0 0 1px get-color(black, 0.1), 0 2px 3px 0 get-color(black, 0.2);
 
-          .user-profile-tabs__tab {
-            &.ivy-tabs-tab {
-              &[role='tab'] {
-                $set-padding: item-spacing(4);
+          .user-profile-tabs {
+            &__tab-container {
+              width: 100%;
+              display: flex;
+              flex-direction: column;
+              border-bottom: 1px solid get-color(black, 0.15);
 
-                margin-left: item-spacing(0);
-                padding: item-spacing(3) $set-padding;
-                width: 100%;
+              &:last-child {
+                border-bottom: none;
+              }
+            }
 
-                &:first-child {
-                  padding-left: $set-padding;
-                }
+            &__tab {
+              &.ivy-tabs-tab {
+                &[role='tab'] {
+                  $set-padding: item-spacing(5);
 
-                &[aria-selected='true'] {
-                  color: get-color(black, 0.6);
-                  background-color: get-color(slate3, 0.25);
+                  margin-left: item-spacing(0);
+                  padding: item-spacing(3) $set-padding;
+                  width: 100%;
+                  font-weight: 200;
 
-                  &:before {
-                    background-color: transparent;
+                  &:first-child {
+                    padding-left: $set-padding;
+                  }
+
+                  &[aria-selected='true'] {
+                    color: get-color(black, 0.6);
+                    background-color: get-color(slate3, 0.25);
+                    font-weight: bold;
+
+                    &:before {
+                      background-color: transparent;
+                    }
                   }
                 }
               }
@@ -54,5 +81,30 @@
         }
       }
     }
+  }
+}
+
+.user-profile-content-body {
+  .nacho-button {
+    margin-bottom: item-spacing(2);
+  }
+
+  .entity-list {
+    margin-top: item-spacing(2);
+  }
+
+  padding: 0 0 0 item-spacing(4) + 2;
+
+  &__entity-list {
+    margin-top: item-spacing(2);
+  }
+
+  /// Overrides all instances of below classes to fit into our tab content structure
+  .container {
+    width: 100%;
+  }
+
+  .wh-main-content {
+    margin-top: item-spacing(2);
   }
 }
