--- a/datahub-web/packages/data-portal/app/templates/components/search/search-results.hbs
+++ b/datahub-web/packages/data-portal/app/templates/components/search/search-results.hbs
@@ -1,38 +1,38 @@
-{{#if @showNoResult}}
-  <EmptyState
-    @heading={{if @noResultMsg @noResultMsg "No results found for search query"}}
-  />
-{{else}}
+{{#if result.count}}
   <section class="search-results__header">
     <h3 class="search-results__title">{{@title}}</h3>
     <p class="search-results__header-description">Showing {{showingMin}} - {{showingMax}} of {{result.count}} results</p>
   </section>
 
-
   <section class="search-results__content">
     {{#each result.data as |props|}}
-      {{search/search-result
-        trackPrefix=@trackPrefix
-        result=props.data
-        meta=props.meta
-        secondaryActions=@secondaryActions
-        resultFields=@fields
-      }}
+      <Search::SearchResult
+        @trackPrefix={{@trackPrefix}}
+        @result={{props.data}}
+        @meta={{props.meta}}
+        @searchConfig={{@searchConfig}}
+      />
     {{/each}}
   </section>
 
   <section class="search-results__pagination">
-    {{nacho/nacho-pagination
-      currentPage=result.page
-      totalPages=result.totalPages
-      linkTo=(hash
+    <Nacho::NachoPagination
+      @currentPage={{result.page}}
+      @totalPages={{result.totalPages}}
+      @updatePageHandler={{@updatePageHandler}}
+      @linkTo={{hash
         route=@route
         queryParams=(hash
           category=category
           source=source
         )
-      )
-    }}
+      }}
+    />
   </section>
-
+{{else}}
+  <section class="empty-state__container">
+    <EmptyState
+      @heading={{if @noResultMsg @noResultMsg "No results found for search query"}}
+    />
+  </section>
 {{/if}}
