--- a/datahub-web/packages/data-portal/app/templates/search.hbs
+++ b/datahub-web/packages/data-portal/app/templates/search.hbs
@@ -1,12 +1,14 @@
 <div class="row">
-  {{search/search-main
-    trackPrefix="searchResult"
-    shouldCollectSearchTelemetry=true
-    keyword=this.keyword
-    facets=this.facets
-    page=this.page
-    entity=this.entity
-    fields=this.model.fields
-  }}
+  <Search::SearchMain
+    @searchConfig={{this.model.searchConfig}}
+    @trackPrefix="searchResult"
+    @shouldCollectSearchTelemetry={{true}}
+    @keyword={{this.keyword}}
+    @facets={{this.facets}}
+    @page={{this.page}}
+    @entity={{this.entity}}
+    @fields={{this.model.fields}}
+    @showFacets={{this.model.showFacets}}
+  />
 </div>
 
