--- a/datahub-web/packages/data-portal/app/templates/components/dataset-author.hbs
+++ b/datahub-web/packages/data-portal/app/templates/components/dataset-author.hbs
@@ -4,9 +4,9 @@
       {{avatars/avatar-image avatar=@owner.avatar}}
     {{/unless}}
 
-    <a href={{@owner.profile}} rel="noopener" target="blank">
+    <LinkTo @route="user.profile" @model={{@owner.profile}}>
       {{ownerRecord.userName}}
-    </a>
+    </LinkTo>
 
     {{#if isOwnerInActive}}
 
