--- a/datahub-web/packages/data-portal/app/templates/components/navbar.hbs
+++ b/datahub-web/packages/data-portal/app/templates/components/navbar.hbs
@@ -24,7 +24,7 @@
         class="navbar-brand"
       }}
         {{svg-jar "inbug" width="34px" height="34px"}}
-        <span class="navbar-brand-text">DATA HUB</span>
+        <span class="navbar-brand-text">DataHub</span>
       {{/link-to}}
     </div>
 
