--- a/datahub-web/packages/data-portal/app/templates/login.hbs
+++ b/datahub-web/packages/data-portal/app/templates/login.hbs
@@ -6,7 +6,7 @@
       class="landing-logo"
       alt="Data Hub Logo"
     >
-    <h1 class="nacho-login__header">DATA HUB</h1>
+    <h1 class="nacho-login__header">DataHub</h1>
     <p>
       Connecting you to the data that matters.
     </p>
