feature: 📝 - Show Dataset description (#1569)
* Use v0.3 for datahub docker images as part of quickstart

* feature: :memo: - Show Dataset description

* wip: clean unrelated changes

Co-authored-by: Kerem Sahin <ksahin@linkedin.com>

--- a/datahub-web/packages/data-portal/app/styles/layout/_dataset.scss
+++ b/datahub-web/packages/data-portal/app/styles/layout/_dataset.scss
@@ -18,6 +18,14 @@
   margin: 0;
 }
 
+.dataset-description {
+  display: flex;
+  padding-right: item-spacing(3);
+  word-wrap: break-word;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+
 .dataset-header-meta {
   display: flex;
   position: relative;
