--- a/datahub-web/packages/data-portal/app/templates/components/datasets/dataset-header.hbs
+++ b/datahub-web/packages/data-portal/app/templates/components/datasets/dataset-header.hbs
@@ -45,6 +45,12 @@
       {{/if}}
     </div>
 
+    {{#if @model.description}}
+      <span class="dataset-description">
+        {{@model.description}}
+      </span>
+    {{/if}}
+
     {{datasets/containers/dataset-owner-list
       urn=encodedUrn
       avatarEntityProps=avatarEntityProps
